--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <footer>
+  <p>📧 Email: <a href="mailto:sumathidhandapani72@gmail.com">sumathidhandapani72@gmail.com</a></p>
+  <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/sumathi-d-097113235" target="_blank">linkedin.com/in/sumathi-d-097113235</a></p>
+</footer>
   </body>
 </html>
